@@ -1,9 +1,9 @@
 package br.edu.utfpr.pb.pw44s.server;
 
-import br.edu.utfpr.pb.pw44s.server.error.ApiError;
 import br.edu.utfpr.pb.pw44s.server.model.User;
 import br.edu.utfpr.pb.pw44s.server.repository.UserRepository;
 import br.edu.utfpr.pb.pw44s.server.shared.GenericResponse;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,23 +14,18 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @ActiveProfiles("test")
-// @TestMethodOrder(MethodOrderer.MethodName.class)
 public class UserControllerTest {
-
-    private static final String API_USERS = "/users";
+    private static final String API_USER = "/users";
     @Autowired
     private TestRestTemplate testRestTemplate;
+
     @Autowired
     private UserRepository userRepository;
-
 
     @BeforeEach
     public void cleanup() {
@@ -41,38 +36,34 @@ public class UserControllerTest {
     @Test
     public void postUser_whenUserIsValid_receiveOk() {
         User user = createValidUser();
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+        ResponseEntity<Object> response = testRestTemplate.postForEntity(API_USER, user, Object.class);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
     }
 
     @Test
     public void postUser_whenUserIsValid_userSavedToDatabase() {
         User user = createValidUser();
-        postSignup(user, Object.class);
+        testRestTemplate.postForEntity(API_USER, user, Object.class);
         assertThat(userRepository.count()).isEqualTo(1);
     }
 
     @Test
     public void postUser_whenUserIsValid_receiveSuccessMessage() {
         User user = createValidUser();
-        ResponseEntity<GenericResponse> response = postSignup(user, GenericResponse.class);
-        assertThat(response.getBody().getMessage()).isNotNull();
-    }
-
-    @Test
-    public void postUser_whenUserIsValidAndPasswordIsValid_receiveSuccessMessage() {
-        User user = createValidUser();
-        ResponseEntity<GenericResponse> response = postSignup(user, GenericResponse.class);
+        var response = testRestTemplate.postForEntity(API_USER, user, GenericResponse.class);
+        Assertions.assertNotNull(response.getBody());
         assertThat(response.getBody().getMessage()).isNotNull();
     }
 
     @Test
     public void postUser_whenUserIsValid_passwordIsHashedInDatabase() {
         User user = createValidUser();
-        postSignup(user, Object.class);
+
+        testRestTemplate.postForEntity(API_USER, user, GenericResponse.class);
 
         List<User> users = userRepository.findAll();
-        User userBD = users.get(0);
+        User userBD = users.getFirst();
 
         assertThat(userBD.getPassword()).isNotEqualTo(user.getPassword());
     }
@@ -81,184 +72,16 @@ public class UserControllerTest {
     public void postUser_whenUserHasNullUsername_receiveBadRequest() {
         User user = createValidUser();
         user.setUsername(null);
-        ResponseEntity<Object> response = postSignup(user, Object.class);
+        ResponseEntity<Object> response = testRestTemplate.postForEntity(API_USER, user, Object.class);
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasNullDisplayName_receiveBadRequest() {
-        User user = createValidUser();
-        user.setDisplayName(null);
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasNullPassword_receiveBadRequest() {
-        User user = createValidUser();
-        user.setPassword(null);
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasUsernameWithLessThanRequired_receiveBadRequest() {
-        User user = createValidUser();
-        user.setUsername("abc");
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasDisplayNameWithLessThanRequired_receiveBadRequest() {
-        User user = createValidUser();
-        user.setDisplayName("abc");
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasPasswordWithLessThanRequired_receiveBadRequest() {
-        User user = createValidUser();
-        user.setPassword("12345");
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasUsernameExceedsTheLengthLimit_receiveBadRequest() {
-        User user = createValidUser();
-        String stringWith256Chars = IntStream.rangeClosed(1, 256).mapToObj(x -> "a")
-                .collect(Collectors.joining());
-        user.setUsername(stringWith256Chars);
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasDisplayNameExceedsTheLengthLimit_receiveBadRequest() {
-        User user = createValidUser();
-        String stringWith256Chars = IntStream.rangeClosed(1, 256).mapToObj(x -> "a")
-                .collect(Collectors.joining());
-        user.setDisplayName(stringWith256Chars);
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasPasswordExceedsTheLengthLimit_receiveBadRequest() {
-        User user = createValidUser();
-        String stringWith256Chars = IntStream.rangeClosed(1, 256).mapToObj(x -> "a")
-                .collect(Collectors.joining());
-        user.setPassword(stringWith256Chars);
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasPasswordAllLowercase_receiveBadRequest() {
-        User user = createValidUser();
-        user.setPassword("password");
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasPasswordAllUpercase_receiveBadRequest() {
-        User user = createValidUser();
-        user.setPassword("password".toUpperCase());
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserHasPasswordAllNumber_receiveBadRequest() {
-        User user = createValidUser();
-        user.setPassword("123456");
-        ResponseEntity<Object> response = postSignup(user, Object.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void postUser_whenUserIsInvalid_receiveApiError() {
-        User user = new User();
-        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-        assertThat(response.getBody().getUrl()).isEqualTo(API_USERS);
-    }
-
-    @Test
-    public void postUser_whenUserIsInvalid_receiveApiErrorWithValidationErrors() {
-        User user = new User();
-        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-        assertThat(response.getBody().getValidationErrors().size()).isEqualTo(3);
-    }
-
-    @Test
-    public void postUser_whenUserHasNullUsername_receiveMessageOfNullUsername() {
-        User user = createValidUser();
-        user.setUsername(null);
-        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-        Map<String, String> validationErrors = response.getBody().getValidationErrors();
-        // assertThat(validationErrors.get("username")).isEqualTo("O 'usuário' não pode ser nulo");
-        assertThat(validationErrors.get("username")).isEqualTo("must not be null");
-    }
-
-    @Test
-    public void postUser_whenUserHasNullPassword_receiveGenericMessageOfNullError() {
-        User user = createValidUser();
-        user.setPassword(null);
-        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-        Map<String, String> validationErrors = response.getBody().getValidationErrors();
-        assertThat(validationErrors.get("password")).isEqualTo("must not be null");
-    }
-
-    @Test
-    public void postUser_whenUserHasInvalidLength_receiveGenericMessageOfSizeError() {
-        User user = createValidUser();
-        user.setUsername("abc");
-        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-        Map<String, String> validationErrors = response.getBody().getValidationErrors();
-        // assertThat(validationErrors.get("username")).isEqualTo("O campo usuário deve possuir entre 4 e 50 caracteres");
-        assertThat(validationErrors.get("username")).isEqualTo("size must be between 4 and 50");
-    }
-
-    @Test
-    public void postUser_whenUserHasInvalidPasswordPattern_receiveMessageOfPasswordPatternError() {
-        User user = createValidUser();
-        user.setPassword("12345678");
-        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-        Map<String, String> validationErrors = response.getBody().getValidationErrors();
-        assertThat(validationErrors.get("password")).isEqualTo("must match \"^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).*$\"");
-    }
-
-    // Não estamos validando usuários duplicados.
-//    @Test
-//    public void postUser_whenAnotherUserHasSameUsername_receiveBadRequest() {
-//        userRepository.save(createValidUser());
-//        User user = createValidUser();
-//        ResponseEntity<Object> response = postSignup(user, Object.class);
-//        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-//    }
-// Não estamos validando usuários duplicados.
-//    @Test
-//    public void postUser_whenAnotherUserHasSameUsername_receiveMessageOfDuplicateUsername() {
-//        userRepository.save(createValidUser());
-//        User user = createValidUser();
-//        ResponseEntity<ApiError> response = postSignup(user, ApiError.class);
-//        Map<String, String> validationErrors = response.getBody().getValidationErrors();
-//        assertThat(validationErrors.get("username")).isEqualTo("Esse usuário já está sendo utilizado");
-//    }
-
-    public <T> ResponseEntity<T> postSignup(Object request,  Class<T> responseType) {
-        return testRestTemplate.postForEntity(API_USERS, request, responseType);
     }
 
     private User createValidUser() {
-        User user = new User();
-        user.setUsername("test-user");
-        user.setDisplayName("test-display");
-        user.setPassword("P4ssword");
-        return user;
+        return User.builder()
+                .username("test-user")
+                .displayName("test-Display")
+                .password("P4ssword")
+                .build();
     }
 
 }
